--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "alpinejs": "^3.13.5"
+        "alpinejs": "^3.13.5",
+        "notyf": "^3.10.0",
+        "sweetalert2": "^11.10.5"
     }
 }
