--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "php-flasher/flasher-laravel": "^1.15",
         "silverhand7/laravel-artisan-maker": "^3.0"
     },
     "require-dev": {
