--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.13.5",
+        "htmx.org": "^1.9.10",
         "notyf": "^3.10.0",
         "sweetalert2": "^11.10.5"
     }
